--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
     <title>zenithquest page 1</title>
   </head>
   <body>
-    <img src = "zenithquest.github.io/page1.svg"/>
+    <img src = "zenithquest.github.io/page1.svg" style = "width: 100%;"/>
   </body>
 </html>
